# swarm-probe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: microservice.yaml
src/swarm_probe/: __init__.py  agent.py  cli.py  ecosystem.py  loader.py  metrics.py  reporter.py  sarif.py  scenarios.py  simulation.py
src/swarm_probe/probes/: __init__.py  base.py  injection.py  poisoning.py  trust.py
tests/: test_agent.py  test_ecosystem.py  test_loader.py  test_metrics.py  test_probes.py  test_sarif.py  test_simulation.py
