[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-probe"
version = "0.1.0"
description = "Adversarial resilience testing for multi-agent ecosystems"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Jackson", email = "jackson@claude-go.dev"},
]
keywords = ["security", "agents", "testing", "adversarial", "swarm", "ecosystem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
swarm-probe = "swarm_probe.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
